--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <title>Portfolio - Juan Jesús González Hernández</title>
 </head>
 <body>
-    <h1>Hola, soy Juan Jesús González Hernández<</h1>
-    <p>Desarrollador Junior especializado en Java y C#.</p>
+    <h1>Hola, soy Juan Jesús González Hernández</h1>
+    <p>
+        Desarrollador Junior con formación en Desarrollo de Aplicaciones Multiplataforma.
+        Trabajo principalmente con Java y C#, y tengo interés en la ciberseguridad aplicada
+        al desarrollo de software.
+    </p>
 
     <h2>Proyectos</h2>
-    <p>En construcción 🚧</p>
+    <p>
+    Aplicación de escritorio para gestionar tareas de manera sencilla y visual.
+    Permite añadir, editar, eliminar y marcar tareas como completadas. Incluye persistencia de datos y una interfaz intuitiva.
+    </p>
+    <p>
+        <a href="https://github.com/JJHernan-dev/to-do-list-javafx">Ver en GitHub</a>
+    </p>
+
+    <h3>Gestor de Contraseñas – C# WPF</h3>
+    <p>
+        Aplicación de escritorio desarrollada con C# y WPF que implementa encriptación básica
+        para el almacenamiento seguro de contraseñas.
+    </p>
+    <p>
+    <a href="https://github.com/JJHernan-dev/PasswordManager">Ver en GitHub</a>
+    </p>
 
     <h2>Contacto</h2>
     <p>
