--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </p>
 
     <h2>Proyectos</h2>
+    <h3>To Do List – Java</h3>
     <p>
     Aplicación de escritorio para gestionar tareas de manera sencilla y visual.
     Permite añadir, editar, eliminar y marcar tareas como completadas. Incluye persistencia de datos y una interfaz intuitiva.
