--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Portfolio - Juan Jesús González Hernández</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main>
         <h1>Hola, soy Juan Jesús González Hernández</h1>
@@ -13,30 +15,38 @@
             Trabajo principalmente con Java y C#, y tengo interés en la ciberseguridad aplicada
             al desarrollo de software.
         </p>
-
+        
         <h2>Proyectos</h2>
-        <h3>To Do List – Java</h3>
-        <p>
-            Aplicación de escritorio para gestionar tareas de manera sencilla y visual.
-            Permite añadir, editar, eliminar y marcar tareas como completadas. Incluye persistencia de datos y una interfaz intuitiva.
-        </p>
-        <p>
-            <a href="https://github.com/JJHernan-dev/to-do-list-javafx">Ver en GitHub</a>
-        </p>
 
-        <h3>Gestor de Contraseñas – C# WPF</h3>
-        <p>
-            Aplicación de escritorio desarrollada con C# y WPF que implementa encriptación básica
-            para el almacenamiento seguro de contraseñas.
-        </p>
-        <p>
-        <a href="https://github.com/JJHernan-dev/PasswordManager">Ver en GitHub</a>
-        </p>
+        <div class="projects">
+            <div class="card">
+                <h3>To Do List – Java</h3>
+                <p>
+                    Aplicación de escritorio para gestionar tareas de manera sencilla y visual.
+                    Permite añadir, editar, eliminar y marcar tareas como completadas. Incluye persistencia de datos y
+                    una interfaz intuitiva.
+                </p>
+                <a href="https://github.com/JJHernan-dev/to-do-list-javafx" target="_blank">
+                    Ver en GitHub →
+                </a>
+            </div>
 
+            <div class="card">
+                <h3>Gestor de Contraseñas – C# WPF</h3>
+                <p>
+                    Aplicación de escritorio desarrollada con C# y WPF que implementa encriptación
+                    para el almacenamiento seguro de contraseñas.
+                </p>
+                <a href="https://github.com/JJHernan-dev/PasswordManager" target="_blank">
+                    Ver en GitHub →
+                </a>
+            </div>
+        </div>
         <h2>Contacto</h2>
         <p>
-        <a href="https://github.com/JJHernan-dev">GitHub</a>
+            <a href="https://github.com/JJHernan-dev">GitHub</a>
         </p>
-        </main>
+    </main>
 </body>
+
 </html>
