--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+    <header class="header">
+        <h1>Juan Jesús González Hernández</h1>
+        <p>Desarrollador Junior · Java · C# · Seguridad</p>
+    </header>
     <main>
         <h1>Hola, soy Juan Jesús González Hernández</h1>
         <p>
@@ -15,7 +19,7 @@
             Trabajo principalmente con Java y C#, y tengo interés en la ciberseguridad aplicada
             al desarrollo de software.
         </p>
-        
+
         <h2>Proyectos</h2>
 
         <div class="projects">
