--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-        <h1>Juan Jesús González Hernández</h1>
+        <h1>JJHernan</h1>
         <p>Desarrollador Junior · Java · C# · Seguridad</p>
     </header>
     <main>
@@ -51,6 +51,12 @@
             <a href="https://github.com/JJHernan-dev">GitHub</a>
         </p>
     </main>
+    <footer class="footer">
+        <p>
+            © 2026 · Juan Jesús González Hernández  ·
+            <a href="https://github.com/JJHernan-dev" target="_blank">GitHub</a>
+        </p>
+    </footer>
 </body>
 
 </html>
