--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="hero-title">Juan Jesús González Hernández</h1>
         <p>Desarrollador Junior · Java · C# · Seguridad</p>
         <div class="header-buttons">
-            <a class="cv-button" href="CV_JJHernan.pdf" target="_blank">
+            <a class="cv-button" href="CV_JuanJesús_González_Hernández.pdf" target="_blank">
                 <i class="fa-solid fa-file-arrow-down"></i>
                 Descargar CV
             </a>
