--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <a href="https://github.com/JJHernan-dev" target="_blank">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="https://www.linkedin.com/in/TU-PERFIL" target="_blank">
+            <a href="https://www.linkedin.com/in/juan-jes%C3%BAs-gonz%C3%A1lez-hern%C3%A1ndez-28116b3a8/" target="_blank">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
         </div>
